fixed: scrollbar track styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,13 +73,10 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-  box-shadow: var(--shadow-2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 body::-webkit-scrollbar-thumb {
-  /*background-color: rgb(32, 32, 32);
-  */
   background-color: #e3e2df;
   box-shadow: var(--shadow-1);
   border: 1px solid var(--background-color-2);
